--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
         $.material.init();
       });
     </script>
+    <%= render partial: 'common/header' %>
     <div class='container'>
       <div class='row'>
         <div class='col-lg-12'>
