--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -11,8 +11,13 @@
       <% end %>
       <div class='navbar-collapse collapse navbar-responsive-collapse navbar-right'>
         <ul class='nav navbar-nav'>
-          <li><%= link_to 'HOME', root_path %></li>
-          <li class='dropdown'>
+          <li>
+            <%= link_to 'HOME', root_path %>
+          </li>
+          <li>
+            <%= link_to "マイページ", user_path(current_user) %>
+          </li>
+          <li>
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
           </li>
         </ul>
