--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -17,9 +17,11 @@
           <li>
             <%= link_to "マイページ", user_path(current_user) %>
           </li>
+          <% if current_user.id == @user.id %>
           <li>
             <%= link_to "プロフィール編集", edit_user_path(current_user) %>
           </li>
+          <% end %>
           <li>
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
           </li>
