--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -15,6 +15,9 @@
             <%= link_to 'HOME', root_path %>
           </li>
           <li>
+            <%= link_to current_user.group.key, group_path(current_user.group) %>
+          </li>
+          <li>
             <%= link_to "マイページ", user_path(current_user) %>
           </li>
           <li>
